[tool.poetry]
name = "inflammation"
version = "0.1.0"
description = ""
authors = ["JBello1610 <johnbellooro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "1.24.4"
matplotlib = "3.7.5"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
